kubernetes/paperless-ngx/prod-d1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: paperless
    app.kubernetes.io/component: app
  name: paperless-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless
      app.kubernetes.io/component: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless
        app.kubernetes.io/component: app
    spec:
      containers:
        - name: paperless-app
          image: ghcr.io/paperless-ngx/paperless-ngx:2.15.3
          livenessProbe:
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            failureThreshold: 5
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            failureThreshold: 5
            periodSeconds: 30
            timeoutSeconds: 10
          ports:
            - name: paperless-http
              protocol: TCP
              containerPort: 8000
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: data
              subPath: config
            - mountPath: /data/
              name: media
      restartPolicy: Always
      volumes:
        - name: media
          nfs:
            server: 10.15.21.132
            path: /mnt/user/documents/
            readOnly: false
        - name: data
          persistentVolumeClaim:
            claimName: paperless-pvc
            readOnly: false
