kubernetes/paperless-ngx/prod-d1/sftp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sftp
  namespace: paperless
  labels:
    app.kubernetes.io/name: paperless
    app.kubernetes.io/component: sftp
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless
      app.kubernetes.io/component: sftp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless
        app.kubernetes.io/component: sftp
    spec:
      containers:
      - name: sftp
        image: "atmoz/sftp@sha256:0960390462a4441dbb63698d7c185b76a41ffcee7b78ff4adf275f3e66f9c475"
        ports:
        - name: paperless-sftp 
          containerPort: 22
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /data/
        - name: ssh-keys
          mountPath: /home/user/.ssh/keys
      volumes:
        - name: data
          nfs:
            server: 10.15.21.132
            path: /mnt/user/documents/downloads/paperless-ngx/consume/
            readOnly: false
        - name: ssh-keys
          configMap:
            name: sftp-user-keys
