kubernetes/paperless-ngx/prod-d1/ocr-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: paperless
    app.kubernetes.io/component: ocr
  name: paperless-ocr-service
spec:
  selector:
    app.kubernetes.io/name: paperless
    app.kubernetes.io/component: ocr
  ports:
    - name: gotenberg-http
      port: 3000
      targetPort: gotenberg-http
      protocol: TCP
    - name: tika-http
      port: 9998
      targetPort: tika-http
      protocol: TCP
