kubernetes/paperless-ngx/prod-d1/sftp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: paperless
    app.kubernetes.io/component: sftp
  name: paperless-sftp-service
  namespace: paperless
spec:
  type: ClusterIP
  ports:
    - name: paperless-sftp
      port: 22
      targetPort: paperless-sftp
      protocol: TCP
  selector:
      app.kubernetes.io/name: paperless
      app.kubernetes.io/component: sftp
