kubernetes/paperless-ngx/prod-d1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ingress
  namespace: paperless
  labels:
    app.kubernetes.io/name: paperless
    app.kubernetes.io/component: app
  annotations:
    # Cert-manager annotation to automatically request and manage the certificate
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: paperless.kube-prod-d1.mclacken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-http
                port:
                  number: 8000
  tls:
    - hosts:
        - paperless.kube-prod-d1.mclacken.net
      secretName: paperless-certificate-secret
