kubernetes/paperless-ngx/prod-d1/sftp-ingressroutetcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: paperless-sftp
  namespace: paperless
  labels:
    app.kubernetes.io/name: paperless
    app.kubernetes.io/component: sftp
spec:
  entryPoints:                    
    - sftp
  routes:                         
  - match: HostSNI(`*`)           
    priority: 10                  
    # middlewares:
    # - name: middleware1           
    #   namespace: default          
    services:                     
    - name: paperless-sftp-service                   
      port: 22                  
      # weight: 10                  
      # proxyProtocol:              
      #   version: 1                
      # serversTransport: transport 
      # nativeLB: true              
      # nodePortLB: true            
      # tls: false                  

  # tls:                            
  #   secretName: supersecret       
  #   options:                      
  #     name: opt                   
  #     namespace: default          
  #   certResolver: foo             
  #   domains:                      
  #   - main: example.net           
  #     sans:                       
  #     - a.example.net
  #     - b.example.net
  #   passthrough: false
